--- a/bash/config
+++ b/bash/config
@@ -1,2 +1,2 @@
-export PS1='\w\[\e[1;32m\]$(__git_ps1 " (%s)")\[\e[0m\]$ '
+export PS1='\w\[\e[1;32m\]$(__git_ps1 " (%s)")\[\e[0m\]\e[0;34m$\e[m '
 export EDITOR="vim"
