--- a/bash/config
+++ b/bash/config
@@ -1,5 +1,8 @@
-export PS1='$(if [ -n "$(__git_user '%s')" ]; then echo "\w\[\e[1;32m\]$(__git_ps1 " (%s)")\[\e[0m\]\e[1;33m↵
-\e[1;30m$(__git_user "%s") ~ $(__git_email "%s")\e[0;34m$\e[m "; else echo "\w\e[0;34m$\e[m "; fi)'
+export PS1='$(if [ -n "$(__git_user '%s')" ]; then echo "\w\[\e[1;32m\]$(__git_ps1 " (%s)")\[\e[0m\]\[\e[1;33m\]↵
+\[\e[1;30m\]$(__git_user "%s") ~ $(__git_email "%s")\[\e[0;34m\]$\[\e[m\] "; else echo "\w\[\e[0;34m\]$\[\e[m\] "; fi)'
+
+export PS2='\[\e[1;33m\]→ \[\e[m\]'
+export PS3='boo'
 
 
 export EDITOR="vim"
